--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -28,7 +28,7 @@ idf_component_register(
 
     # Demo only for plasticlogic.com epapers:
     #SRCS "demos/demo-epaper-plasticlogic.cpp"
-    SRCS "www-image/GIF/plasticlogic-animation.cpp"
+    
     # Plasticlogic video demo: Please build it in www-image/video
 
     # Only parallel epapers (Driven by I2Sbus)
@@ -36,8 +36,10 @@ idf_component_register(
     #SRCS "demos/parallel/demo-epaper-parallel-partial.cpp"
     #SRCS "demos/parallel/demo-touch-parallel.cpp"
     #SRCS "demos/parallel/demo-touch-keyboard.cpp"
-    INCLUDE_DIRS "." 
-                 "www-image/GIF/img")
+    #SRCS "demos/epd47-touch/touch-simple.cpp"
+    # Note: Enable in menuconfig > Touch FT6X36 Configuration > L58_MULTITOUCH to 1 
+    SRCS "demos/epd47-touch/multitouch-circles.cpp"
+    INCLUDE_DIRS ".")
 
-    # This is just to avoid that BitBank2 components like AnimatedGIF include Arduino.h
+    # This is just to avoid that BitBank2 components include Arduino.h
 idf_build_set_property(COMPILE_OPTIONS "-D __LINUX__" APPEND) 
