--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -28,7 +28,8 @@ idf_component_register(
 
     # Demo only for plasticlogic.com epapers:
     #SRCS "demos/plasticlogic/demo-epaper-plasticlogic.cpp"
-    SRCS "demos/plasticlogic/demo-sleep-clock-temp.cpp"
+    #SRCS "demos/plasticlogic/demo-sleep-clock-temp.cpp"
+    SRCS "demos/plasticlogic/news-ticker.cpp"
     # Plasticlogic video demo: Please build it in www-image/video
 
     # Only parallel epapers (Driven by I2Sbus)
