Enable also gdeh0213b73 class. Fixes #59

--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -11,6 +11,7 @@ set(srcs
     # Touch model, please also enable FT6X36-IDF in the REQUIRE section
     #"models/gdew027w3T.cpp"
     "models/gdew0213i5f.cpp"
+    "models/gdeh0213b73.cpp"
     "models/gdep015OC1.cpp"
     "models/gdeh0154d67.cpp"
     "models/heltec0151.cpp"
@@ -45,8 +46,6 @@ set(srcs
     #"models/parallel/ED060SC4.cpp"
     #"models/parallel/ED060XCN.cpp" # pending to be added
 
-    # Pending for more testing:
-    #"models/gdeh0213b73.cpp"
     # Common base classes
     "epd.cpp"
     "epd7color.cpp"
