--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -24,7 +24,7 @@ set(srcs
     "models/color/gdew075c64.cpp"
     "models/color/gdeh042Z96.cpp"
     "models/color/gdeh042Z21.cpp"
-    #"models/color/wave12i48BR.cpp"
+    "models/color/wave12i48BR.cpp"
 
     # 7 colors Waveshare
     "models/color/wave4i7Color.cpp"
