--- a/components/FT6X36-IDF/CMakeLists.txt
+++ b/components/FT6X36-IDF/CMakeLists.txt
@@ -5,6 +5,7 @@ set(srcs
     )
 
 idf_component_register(SRCS ${srcs}
-                    INCLUDE_DIRS "include"
+            REQUIRES driver esp_timer
+            INCLUDE_DIRS "include"
 )
 
