--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -11,7 +11,7 @@ idf_component_register(
 
     # Generic demos for touch displays (With an added layer or Gdew027w3T that comes with touch mounted)
     #SRCS "demos/demo-epaper.cpp"
-    SRCS "demos/demo-grays.cpp"
+    #SRCS "demos/demo-grays.cpp"
     
     # TOUCH examples. 1- Touch indepently from Epd class uses Gdew027w3   2- Touch implemented in Gdew027w3T class
     #SRCS "demos/demo-touch.cpp"
@@ -28,7 +28,7 @@ idf_component_register(
 
     # Demo only for plasticlogic.com epapers:
     #SRCS "demos/plasticlogic/demo-epaper-plasticlogic.cpp"
-    #SRCS "demos/plasticlogic/demo-sleep-clock-temp.cpp"
+    SRCS "demos/plasticlogic/demo-sleep-clock-temp.cpp"
     #SRCS "demos/plasticlogic/news-ticker.cpp"
 
     # Plasticlogic video demo: Please build it in www-image/video
