Rainmaker now working in IDF v5

--- a/components/esp_rainmaker/CMakeLists.txt
+++ b/components/esp_rainmaker/CMakeLists.txt
@@ -57,7 +57,7 @@ set(standard_types_srcs "src/standard_types/esp_rmaker_standard_params.c"
 idf_component_register(SRCS ${core_srcs} ${mqtt_srcs} ${ota_srcs} ${standard_types_srcs} ${console_srcs}
                        INCLUDE_DIRS "include"
                        PRIV_INCLUDE_DIRS ${core_priv_includes} ${ota_priv_includes} ${console_priv_includes}
-                       REQUIRES rmaker_common esp_app_format
+                       REQUIRES rmaker_common
                        PRIV_REQUIRES ${priv_req})
 
 target_add_binary_data(${COMPONENT_TARGET} "server_certs/rmaker_mqtt_server.crt" TEXT)
