--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -1,34 +1,34 @@
 # Add only the display srcs you are going to use if you want to keep compiled srcs to a minimum:
 set(srcs 
-    "models/wave12i48.cpp"
-    "models/gdew075HD.cpp"
-    "models/gdew075T7.cpp"
-    "models/gdew075T7Grays.cpp"
-    "models/gdew075T8.cpp"
-    "models/gdew0583t7.cpp"
-    "models/gdew042t2.cpp"
-    "models/gdew042t2Grays.cpp"
-    "models/gdew027w3.cpp"
-    "models/wave12i48.cpp"
+    #"models/wave12i48.cpp"
+    #"models/gdew075HD.cpp"
+    #"models/gdew075T7.cpp"
+    #"models/gdew075T7Grays.cpp"
+    #"models/gdew075T8.cpp"
+    #"models/gdew0583t7.cpp"
+    #"models/gdew042t2.cpp"
+    #"models/gdew042t2Grays.cpp"
+    #"models/gdew027w3.cpp"
+    #"models/wave12i48.cpp"
     # Touch model, please also enable FT6X36-IDF in the REQUIRE section
     #"models/gdew027w3T.cpp"
-    "models/gdew0213i5f.cpp"
-    "models/gdep015OC1.cpp"
-    "models/gdeh0154d67.cpp"
-    "models/heltec0151.cpp"
+    #"models/gdew0213i5f.cpp"
+    #"models/gdep015OC1.cpp"
+    #"models/gdeh0154d67.cpp"
+    #"models/heltec0151.cpp"
     
     # 3 colors Goodisplay
-    "models/color/gdeh0154z90.cpp"
-    "models/color/gdew0583z21.cpp"
-    "models/color/gdew075z09.cpp"
-    "models/color/gdew075c64.cpp"
+    #"models/color/gdeh0154z90.cpp"
+    #"models/color/gdew0583z21.cpp"
+    #"models/color/gdew075z09.cpp"
+    #"models/color/gdew075c64.cpp"
     "models/color/gdeh042Z96.cpp"
     "models/color/gdeh042Z21.cpp"
-    "models/color/wave12i48BR.cpp"
+    #"models/color/wave12i48BR.cpp"
 
     # 7 colors Waveshare
-    "models/color/wave4i7Color.cpp"
-    "models/color/wave5i7Color.cpp"
+    #"models/color/wave4i7Color.cpp"
+    #"models/color/wave5i7Color.cpp"
     #"models/color/wave5i7ColorVector.cpp"
 
     # Plasticlogic.com Flex epaper models:
@@ -49,12 +49,12 @@ set(srcs
     #"models/parallel/ED060XCN.cpp" # pending to be added
 
     # Pending for more testing:
-    "models/gdeh0213b73.cpp"
+    #"models/gdeh0213b73.cpp"
     # Common base classes
     "epd.cpp"
     "epd7color.cpp"
     "epdspi.cpp"
-    "epd4spi.cpp"
+    #"epd4spi.cpp"
     )
 
 # If the project does not use a touch display component FT6X36-IDF can be removed or #commented
