#69 Add new class gdeq042Z21 based on gdew04Z21

--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -29,6 +29,7 @@ set(srcs
     "models/color/gdew075c64.cpp"
     "models/color/gdeh042Z96.cpp"
     "models/color/gdeh042Z21.cpp"
+    "models/color/gdeq042Z21.cpp"
     "models/color/wave12i48BR.cpp"
 
     # 7 colors ACEP
