--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -5,6 +5,8 @@ set(srcs
     "models/goodisplay/gdey0154d67.cpp"
     "models/goodisplay/gdey029T94.cpp"
     "models/goodisplay/gdey027T91.cpp"
+    # With touch integrated
+    "models/goodisplay/touch/gdey027T91T.cpp"
     # Other mixed brands mostly GOODISPLAY based or using their epapers
     "models/wave12i48.cpp"
     "models/gdew075HD.cpp"
