--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -72,7 +72,7 @@ idf_build_get_property(target IDF_TARGET)
 message(STATUS "→ Building example for ${target}")
 
 if (${target} EQUAL "esp32")
-   add(srcs "epd4spi.cpp")
+    list(APPENDS srcs "epd4spi.cpp")
 endif()
 
 # If the project does not use a touch display component FT6X36-IDF can be removed or #commented
