--- a/components/CalEPD/CMakeLists.txt
+++ b/components/CalEPD/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Add only the display srcs you are going to use if you want to keep compiled srcs to a minimum:
 set(srcs 
     "models/custom/custom042.cpp"
+    "models/gdeh0213b73.cpp"
     # New GOODISPLAY models will be in goodisplay directory
     "models/goodisplay/gdey0213b74.cpp"
     "models/goodisplay/gdey0154d67.cpp"
@@ -9,13 +10,14 @@ set(srcs
     "models/goodisplay/gdey042T81.cpp"
     "models/goodisplay/gdeq037T31.cpp"
     "models/goodisplay/gdey075T7.cpp"
-    # With touch integrated
-    "models/goodisplay/touch/gdey027T91T.cpp"
-
+    # With touch integrated (please also enable FT6X36-IDF in the REQUIRE section)
+    #"models/goodisplay/touch/gdey027T91T.cpp"
+    #"models/gdew027w3T.cpp"
+    
     # DKE epapers (New)
     "models/dke/depg1020bn.cpp"
 	"models/dke/depg750bn.cpp"
-    # Other mixed brands mostly GOODISPLAY based or using their epapers
+    # GoodDisplay
     "models/wave12i48.cpp"
     "models/gdew075HD.cpp"
     "models/gdew075T7.cpp"
@@ -27,8 +29,6 @@ set(srcs
     "models/gdem029E97.cpp"
     "models/gdew027w3.cpp"
     "models/wave12i48.cpp"
-    # Touch model, please also enable FT6X36-IDF in the REQUIRE section
-    #"models/gdew027w3T.cpp"
     "models/gdew0213i5f.cpp"
     "models/gdep015OC1.cpp"
     "models/gdeh0154d67.cpp"
@@ -48,7 +48,7 @@ set(srcs
     "models/color/gdeq042Z21.cpp"
     #"models/color/wave12i48BR.cpp"
 
-    "models/color/dke075z83.cpp"
+    "models/color/dke/dke075z83.cpp"
     # 7 colors ACEP
     "models/color/gdey073d46.cpp"
     "models/color/wave4i7Color.cpp"
@@ -71,8 +71,6 @@ set(srcs
     #"models/parallel/ED060SC4.cpp"
     #"models/parallel/ED060XCN.cpp" # pending to be added
 
-    # Pending for more testing:
-    "models/gdeh0213b73.cpp"
     # Common base classes
     "epd.cpp"
     "epd7color.cpp"
@@ -90,8 +88,9 @@ endif()
 # If the project does not use a touch display component FT6X36-IDF can be removed or #commented
 idf_component_register(SRCS ${srcs}      
                     REQUIRES "Adafruit-GFX"
-                    REQUIRES "FT6X36-IDF"
-                    REQUIRES esp_timer
+                    #REQUIRES "FT6X36-IDF"
+                    REQUIRES esp_timer 
+                             driver
                     # Uncomment for parallel epapers:
                     # REQUIRES "epdiy"
 
